# sp6_22

./: .env.example  README.md  catalog_fixture.json  categories.json  groups.json  products.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html  header.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published.py  0003_alter_product_options.py  0004_alter_product_options.py  0005_product_owner.py
catalog/templates/: base.html  contacts.html  footer.html  header.html  home.html  product_detail.html
catalog/templates/catalog/: contact.html  header.html  home.html  product_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: my_tags.py
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/: login.html  register.html
